# cddlib-logarithmic

./: .gitignore  ARCHITECTURE_OVERVIEW.md  DELIVERY_NOTES.md  IMPLEMENTATION_DETAILS.md  Makefile.am  README.logarithmic.md  VERIFICATION_MATRIX.md  cddlog.pc  cddlog.pc.in  configure.ac  run-tests.sh
examples/: samplelog1.ine  samplelog_box.ead  samplelog_box.ecd  samplelog_box.ext  samplelog_box.iad  samplelog_box.icd  samplelog_box.ine  samplelog_box3d.ead  samplelog_box3d.ecd  samplelog_box3d.ext  samplelog_box3d.iad  samplelog_box3d.icd  samplelog_box3d.ine  samplelog_box4d.ead  samplelog_box4d.ecd  samplelog_box4d.ext  samplelog_box4d.iad  samplelog_box4d.icd  samplelog_box4d.ine  samplelog_linearity.ine  sampleloglp1.ine
lib-src/: Makefile.am  Makefile.log.am  cddcore.c  cddio.c  cddlib.c  cddlogarithmic.c  cddlogarithmic.h  cddlp.c  cddmp.c  cddmp.h  cddproj.c  cddtypes.h  setoper.c  splitmix64.h
scripts/: build-manual.sh  test-autotools-install.sh
src/: Makefile.am  Makefile.gmp.am  Makefile.log.am  check-default.sh  check-logarithmic-large.sh  check-logarithmic.sh  fourier.c  projection.c  testlogarithmic.c
